2026电赛H题循迹小车/V5/直线测试说明.md
# A→B直线功能首次测试说明（TB6612版）

## 已实现行为

- PA18：启动一次 A→B 直线任务。
- PB23：任何时刻立即把两路PWM设为0。
- PB22：启动一圈循迹任务；运行中再次按PB22不会重复启动。
- PB24：保留。
- 左右编码器：E1A/E1B和E2A/E2B均使用双边沿四倍频解码。
- 直线控制：每10ms读取一次8路灰度，使用位置式PID循迹；同时比较左右编码器位置和速度，补偿两侧机械差异。
- 启动PWM从0开始，每10ms增加5‰，约600ms升到最高300‰。
- 约1200mm后由300‰降到180‰。
- 约1450mm开始把前进PWM每10ms降低8‰，直至0。
- 约1350mm后开放圆弧检测；黑线位置连续30ms偏离中心超过约1.4个探头间距时，立即关闭前进输出并进入制动流程。
- 零PWM保持20ms后，以120‰反向制动70ms，再彻底停车。
- 理论1500mm（左右平均10695计数）仍作为过冲保护点；若提前到达该点，会立即结束前进输出并进入制动阶段。
- 运行超过12秒或任一编码器在有PWM时连续300ms无脉冲，自动故障停车。
- LCD显示陀螺仪Z轴角速度、任务计时、状态和编码器距离。
- PA18启动被确认后计时从`000.000 S`开始；正常停车、PB23急停或故障停车时立即冻结。
- PB22启动一圈任务时同样从`000.000 S`开始计时，到A点停车后冻结。

## 上电先检查LCD和陀螺仪

1. LCD应出现蓝色标题栏和四行数据。
2. 静止放置陀螺仪时，`GYRO WZ`应显示接近`+0000.00 DPS`的数值；轻轻转动陀螺仪时正负号和数值应变化。
3. 若显示`NO DATA`，检查陀螺仪`TX → PA11`、`RX ← PA10`和共地，再确认模块波特率是否为115200。
4. 未启动时，`TIME`应保持`000.000 S`，`STATE`应为`IDLE`。
5. 按PA18后`TIME`开始变化；按PB23后应冻结，`STATE`显示`ABORT`。

LCD数字采用100ms数据刷新周期。GPIO软件SPI每次只改一个变化字符，以降低对10ms电机控制周期的影响，因此多个字符同时变化时可能依次更新，这是正常现象。

制动阶段LCD状态依次显示：

```text
DECEL -> COAST -> BRAKE -> DONE
```

首次测试必须架空车轮，重点确认`BRAKE`阶段只是短促反转后立即停止，而不是持续倒车。制动力参数位于`app_config.h`：

```c
#define AB_BRAKE_START_COUNT            (10338U)
#define AB_BRAKE_ZERO_WAIT_MS              (20U)
#define AB_REVERSE_BRAKE_PWM_PERMILLE      (120)
#define AB_REVERSE_BRAKE_TIME_MS           (70U)
```

如果停车仍超过B点，优先略微减小`AB_BRAKE_START_COUNT`，让减速更早开始；如果出现明显倒退，先减小`AB_REVERSE_BRAKE_TIME_MS`，不要一次同时修改多个参数。

## 第一次必须悬空车轮测试

1. 断开电机主电源，仅给MSPM0上电并下载程序。
2. 确认上电后两个电机都不转。
3. 把小车架高，保证两个驱动轮完全离地。
4. 接通电机主电源。
5. 用手准备随时按PB23。
6. 短按PA18。
7. 观察两个轮子是否都朝车辆前进方向旋转。
8. 立即按PB23，确认两轮停止。

再按同样方式测试PB22：LCD应显示`LAP RUN`，两轮以比PA18任务更低的基础PWM缓慢升速；按PB23后必须立即停止并显示`ABORT`。

如果某个轮子方向相反，打开 `app_config.h`：

```c
#define MOTOR_LEFT_FORWARD_IN1_HIGH   (0)
#define MOTOR_RIGHT_FORWARD_IN1_HIGH  (1)
```

只把反向的那一侧从`1`改成`0`，重新编译下载：

- 左轮反转：只把`MOTOR_LEFT_FORWARD_IN1_HIGH`的0/1取反。
- 右轮反转：只把`MOTOR_RIGHT_FORWARD_IN1_HIGH`的0/1取反。
- 每次只改反向的那一侧，然后重新编译下载。

不要通过交换编码器E1A/E1B或E2A/E2B来修正电机方向。

## 灰度方向和黑白逻辑检查

本版本依据感为辅助板厂家例程设置：

```c
#define GRAY_BLACK_LEVEL       (0U)
#define GRAY_BIT0_IS_LEFT      (1)
```

也就是白底读1、黑线读0，并暂定bit0位于车辆左侧。安装方向必须通过实物确认：

1. 在CCS中下载程序，但先不要接电机VM电源。
2. 点击菜单`View -> Expressions`打开变量观察窗口。
3. 分别加入`GraySensor_getRaw()`、`GraySensor_getBlackMask()`和`GraySensor_getLineError()`。
4. 启动一次PA18任务，暂停程序观察数值。
5. 黑线位于灰度板中心、两个中间探头共同覆盖黑线时，`lineError`应接近0。
   起步PWM低于100‰时，任意一个中间探头见黑都会暂时视为0；进入正常速度后，只有一个中间探头见黑会恢复`±50`的小误差。
6. 把黑线移到车辆左侧，`lineError`应为正；移到右侧应为负。
7. 如果左右符号相反，只把`GRAY_BIT0_IS_LEFT`从1改成0。
8. 如果黑白完全相反，先确认是否使用了本项目对应的感为辅助板固件；确认后才把`GRAY_BLACK_LEVEL`从0改成1。

DAT断线并被PB3下拉时会读到`0x00`。8个探头同时为黑不符合终点横线的3～6灯规则，因此断线不会触发终点停车。弯道短暂丢线时，程序最多保持80ms的最后转向修正以重新找到轨迹；仍未找到才清除修正。

## 灰度PID初始参数

参数位于`app_config.h`：

```c
#define LINE_PID_KP_NUM                     (26)
#define LINE_PID_KI_NUM                      (1)
#define LINE_PID_KD_NUM                     (30)
#define LINE_PID_NEAR_KP_NUM                (16)
#define LINE_PID_NEAR_KD_NUM                (12)
#define LINE_PID_NEAR_ERROR_LIMIT           (150U)
#define LINE_PID_SCALE                     (100)
#define LINE_PID_MAX_CORRECTION_PERMILLE   (150)
#define DRIVE_MAX_CORRECTION_PERMILLE      (170)
#define LINE_CURVE_SPEED_ERROR_THRESHOLD   (200U)
#define LINE_CURVE_BASE_LIMIT_PERMILLE      (180)
#define LINE_STEERING_FULL_RAMP_PERMILLE    (100)
#define LINE_LOST_HOLD_10MS_TICKS            (8U)
#define GRAY_CURVE_ERROR_THRESHOLD          (140)
#define GRAY_CURVE_CONFIRM_10MS_TICKS         (3U)
```

V3把中间两个探头定义为中心容许区，任意一个见黑都不转向。误差不超过150时使用较低的近中心Kp/Kd，并清除积分；误差达到外侧探头后才使用V2的强圆弧参数。启动PWM低于100‰时，转向修正按当前PWM比例逐渐加入，避免低速起步时一侧轮突然得到很大的相对输出。A→B编码器同步也加入位置、速度误差死区，并在线明显偏离中心时暂停累计位置纠偏，防止它与灰度转向相互拉扯。

V4根据实车现象进一步关闭PA18的累计编码器等距离纠偏。PA18与PB22现在都完全由灰度PID决定方向；编码器继续负责里程、LCD速度和堵转保护。这样PA18直线控制方式与已经实车表现平顺的PB22直线段一致。

V5修正了持续横向偏置：V3/V4把任意一个中间探头永久视为完全居中，可能让小车稳定在半个探头间距的偏置位置。V5仅在起步到100‰PWM之间保留这个宽容判断；正常行驶后，单个中间探头产生`±50`误差，首帧约14‰、稳定后约8‰的柔和差速会逐渐把黑线拉到两个中间探头之间。两个中间探头共同覆盖黑线时误差才为0。

如果直线仍有轻微摇摆，先记录摇摆时是哪几个灰度灯交替亮：若只在中间两个灯之间切换但车仍摆动，应检查左右电机机械差异或编码器计数；若会反复点亮中间外侧的相邻灯，可把`LINE_PID_NEAR_KP_NUM`从16降到14。圆弧仍贴最外灯时，再把`LINE_CURVE_BASE_LIMIT_PERMILLE`从180降到170。一次只修改一个参数。

TB6612接线为`PWMA=PB8`、`PWMB=PB9`、`AIN1=PB10`、`AIN2=PB11`、`BIN1=PB12`、`BIN2=PB13`、`STBY=PB14`。PB8/PB9始终保持为TIMA0外设引脚，不在运行时切换GPIO复用。上电、待机、停车和急停时，程序同时把STBY拉低、四个方向端清零，并由定时器ODIS把两路PWM强制拉低；只有PA18启动任务并产生非零占空比后才拉高STBY并解除ODIS。如果重新下载后仍然持续转动：

1. 不接电机主电源，只给MCU和驱动板逻辑部分上电。
2. 用万用表测PB14、PB8、PB9对GND，待机时都应接近0V。
3. 若待机不是低电平，先检查是否确实下载了本次重新生成的固件。
4. 为防止MCU复位期间引脚处于高阻态，建议给STBY加一个10kΩ下拉电阻；也可给PWMA/PWMB各加一个10kΩ下拉。复位瞬间的高阻态无法只靠程序完全消除。

## 编码器检查

悬空低速运行时确认：

1. 左右轮都转动时不会在约300ms后进入故障停车。
2. 拔掉任意一侧编码器信号后再次启动，应在约300ms后自动停车。
3. 如果编码器正常但仍触发故障，先确认“13线”是否表示每个电机轴转一圈A相13个脉冲。

当前按以下约定计算：

```text
13线 × A/B四倍频 × 28减速比 = 1456计数/车轮一圈
```

## 第一次落地测试

1. 暂时不要安装钢球，或把钢球可靠固定。
2. 在平整、空旷地面画出A线和B线，间距准确量取1500mm。
3. 让灰度板中心线对准A线。
4. 小车前方至少留出2m安全距离。
5. 一只手始终准备按PB23。
6. 短按PA18启动。
7. 测量停车后灰度板中心到B线的误差。

记录：

```text
第1次停车误差：提前/超过 ____ mm
第2次停车误差：提前/超过 ____ mm
第3次停车误差：提前/超过 ____ mm
```

三次误差方向一致后再修改 `AB_TARGET_COUNT`：

```text
每1mm约等于7.13计数

超过20mm：目标计数减少约143
提前20mm：目标计数增加约143
```

目标计数在 `app_config.h`：

```c
#define AB_TARGET_COUNT (10695U)
```

## PB22一圈任务测试

赛道中心线理论长度为：

```text
2 × 1.5m + 2 × π × 0.5m = 6.142m
```

编码器的理论6.142m不再直接决定正常停车，只用于接近终点时减速、开放横线识别以及漏检保护：

```c
#define LAP_CRUISE_PWM_PERMILLE       (220)
#define LAP_APPROACH_PWM_PERMILLE     (170)
#define LAP_SLOW_DOWN_COUNT         (41347U)  /* 约5800mm */
#define LAP_FINISH_ARM_COUNT        (38491U)  /* 约5400mm后开放识别 */
#define LAP_MISSED_MARKER_STOP_COUNT (45068U) /* 约6322mm漏检保护 */
#define LAP_FINISH_CONFIRM_10MS_TICKS   (2U)
#define LAP_FINISH_BRAKE_AFTER_COUNT   (927U)  /* 横线后约130mm开始减速 */
#define LAP_FINISH_STOP_AFTER_COUNT   (1283U)  /* 横线后约180mm强制制动 */
#define LAP_TIMEOUT_MS              (45000U)
```

终点横线的判定条件为：任意位置有3～6个黑色探头、其中至少3个连续，并连续保持20ms。普通纵向轨迹通常只亮1～2个灯；DAT断线产生的8灯全黑也会被排除。取消“必须覆盖中间两个探头”的限制，是因为小车刚离开最后一个圆弧时可能仍有横向偏差。识别仍在约5.4m后才开放，因此起步时位于同一条起终点线不会被误判。

如果横线仍然漏检，编码器保护最迟约在6322mm停车，即理论终点后约180mm，不再像V3那样继续到约6700mm、驶入下一段直线中部。正常检测到横线时仍按`LINE HIT`流程停车。

测试步骤：

1. 灰度板中心对准A点，车头朝B点。
2. 第一次测试不要安装钢球，或者可靠固定钢球。
3. 按PB22，LCD状态应显示`LAP RUN`。
4. 小车应依次经过`A→B→C→D→A`，在B、C、D圆弧处不能触发A→B任务的圆弧停车。
5. 接近A点时显示`LAP SLOW`；识别终点横线后显示`LINE HIT`，继续循迹约130mm后才开始减速，最终进入`DECEL→COAST→BRAKE→DONE`。
6. 全程准备按PB23。

停车时终点横线应位于灰度板后方、驱动轴附近或车身下方。连续测试三次并记录终点线相对车身的位置：

```text
车身越过太多：适当减小 LAP_FINISH_BRAKE_AFTER_COUNT
终点线仍在车头外：适当增大 LAP_FINISH_BRAKE_AFTER_COUNT
```

先每次调整约70计数（理论约10mm）。`LAP_FINISH_BRAKE_AFTER_COUNT`不应低于约927计数（130mm），否则无法保证终点线越过灰度板到达驱动轴位置；如仍需缩短停车距离，应优先减小终点后的PWM或增强制动。

## 当前限制

灰度串行协议和厂家默认黑白逻辑已经按开源例程实现，但`GRAY_BIT0_IS_LEFT`仍取决于你的灰度板实际安装朝向，必须完成上面的左右检查。PID参数和圆弧阈值是安全的首次测试值，尚未经过实车标定。
